# votenet

./: .gitignore  CODEBASE_ARCHITECTURE.md  pyproject.toml
doc/: VoteNet-Dependency-Upgrade-Plan.md
pointnet2/: setup.py
utils/: pc_util.py  tf_logger.py
