[project]
name = "votenet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=2.2",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.3",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "trimesh>=4.11.2",
]
